Fix nav menu elements be embedded rather than generated using JavaScript

--- a/layouts/partials/nav_menu.html
+++ b/layouts/partials/nav_menu.html
@@ -1,71 +1,77 @@
-<div class="hmenu-panel" data-click-outside="true" data-reference="hmenu-panel-opener">
+<div class="hmenu-panel" data-click-outside="true" data-reference="dropdown-menu">
   <div class="hmenu-drop-down">
-      <div class="hmenu-body">
-          <div class="hmenu-body-contents">
-              <div class="hmenu-container">
-                  <ul class="hmenu-links">
-                      <li><a href="/download/"><span>Download</span></a></li>
-                      <li><a href="/archives/"><span>Changelog</span></a></li>
-                      <li><a href="/faq/"><span>FAQ</span></a></li>
-                      <li><a href="/docs/"><span>Documentation</span></a></li>
-                      <li><a target='_blank' href="https://forum.virtualmin.com/c/webmin/12"><span>Forum</span>&nbsp;<svg fill="none" shape-rendering="geometricPrecision" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12"><path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path><path d="M15 3h6v6"></path><path d="M10 14 21 3"></path></svg></a></li>
-                      <li><a href="/search/"><span>Search</span></a></li>
-                  </ul>
-                  <div class="clearfix"></div>
-                  <hr>
-              </div>
-              <div class="hmenu-container">
-                  <ul class="hmenu-links">
-                      <li><a href="/about/"><span>About</span></a></li>
-                      <li><a href="/screenshots/"><span>Screenshots</span></a></li>
-                      <li><a href="/community/"><span>Community</span></a></li>
-                      <li><a href="/security/"><span>Security</span></a></li>
-                      <li><a href="/supporters/"><span>Supporters</span></a></li>
-                      <li><a href="/books/"><span>Books</span></a></li>
-                      <li><a href="/tags/"><span>Tags</span></a></li>
-                  </ul>
-                  <div class="clearfix"></div>
-                  <hr>
-              </div>
-              <div class="hmenu-container">
-                  <ul class="hmenu-links">
-                      <li>
-                        <a href="/download/#standard-modules"><span>Standard Modules</span></a>
-                      </li>
-                      <li>
-                        <a href="/about/#supported-systems"><span>Supported Systems</span></a>
-                      </li>
-                      <li>
-                        <a href="/about/#supported-languages"><span>Supported Languages</span></a>
-                      </li>
-                  </ul>
-                  <div class="clearfix"></div>
-              </div>
-              <hr>
-              <ul class="hmenu-categories">
-                  <li class="hmenu-category">
-                    <span>
-                      <a href="/usermin/">
-                        <i class="wm wm-fw wm-md wm-webmin icon-usermin"></i>&nbsp;Usermin
-                      </a>
-                    </span>
-                  </li>
-                  <li class="hmenu-category">
-                    <span>
-                      <a href="/virtualmin/">
-                        <i class="wm wm-fw wm-md wm-virtualmin icon-virtualmin"></i>&nbsp;Virtualmin
-                      </a>
-                    </span>
-                  </li>
-                  <li class="hmenu-category">
-                    <span>
-                      <a href="/cloudmin/">
-                        <i class="wm wm-fw wm-md wm-cloudmin icon-cloudmin"></i>&nbsp;Cloudmin
-                      </a>
-                    </span>
-                  </li>
-              </ul>
-          </div>
+    <div class="hmenu-body">
+      <div class="hmenu-body-contents">
+        <div class="hmenu-container">
+          <ul class="hmenu-links">
+            <li><a href="/download/"><span>Download</span></a></li>
+            <li><a href="/archives/"><span>Changelog</span></a></li>
+            <li><a href="/faq/"><span>FAQ</span></a></li>
+            <li><a href="/docs/"><span>Documentation</span></a></li>
+            <li><a target='_blank' href="https://forum.virtualmin.com/c/webmin/12"><span>Forum</span>&nbsp;<svg
+                  fill="none" shape-rendering="geometricPrecision" stroke="currentcolor" stroke-linecap="round"
+                  stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
+                  <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14 21 3"></path>
+                </svg></a></li>
+            <li><a href="/search/"><span>Search</span></a></li>
+          </ul>
+          <div class="clearfix"></div>
+          <hr>
+        </div>
+        <div class="hmenu-container">
+          <ul class="hmenu-links">
+            <li><a href="/about/"><span>About</span></a></li>
+            <li><a href="/screenshots/"><span>Screenshots</span></a></li>
+            <li><a href="/community/"><span>Community</span></a></li>
+            <li><a href="/security/"><span>Security</span></a></li>
+            <li><a href="/supporters/"><span>Supporters</span></a></li>
+            <li><a href="/books/"><span>Books</span></a></li>
+            <li><a href="/tags/"><span>Tags</span></a></li>
+          </ul>
+          <div class="clearfix"></div>
+          <hr>
+        </div>
+        <div class="hmenu-container">
+          <ul class="hmenu-links">
+            <li>
+              <a href="/download/#standard-modules"><span>Standard Modules</span></a>
+            </li>
+            <li>
+              <a href="/about/#supported-systems"><span>Supported Systems</span></a>
+            </li>
+            <li>
+              <a href="/about/#supported-languages"><span>Supported Languages</span></a>
+            </li>
+          </ul>
+          <div class="clearfix"></div>
+        </div>
+        <hr>
+        <ul class="hmenu-categories">
+          <li class="hmenu-category">
+            <span>
+              <a href="/usermin/">
+                <i class="wm wm-fw wm-md wm-webmin icon-usermin"></i>&nbsp;Usermin
+              </a>
+            </span>
+          </li>
+          <li class="hmenu-category">
+            <span>
+              <a href="/virtualmin/">
+                <i class="wm wm-fw wm-md wm-virtualmin icon-virtualmin"></i>&nbsp;Virtualmin
+              </a>
+            </span>
+          </li>
+          <li class="hmenu-category">
+            <span>
+              <a href="/cloudmin/">
+                <i class="wm wm-fw wm-md wm-cloudmin icon-cloudmin"></i>&nbsp;Cloudmin
+              </a>
+            </span>
+          </li>
+        </ul>
       </div>
+    </div>
   </div>
 </div>
