--- a/layouts/partials/extend_header_menu_items_after.html
+++ b/layouts/partials/extend_header_menu_items_after.html
@@ -1,3 +1,3 @@
 {{- $currentPage := . }}
-<li><a href="/search/"><span class="wm wm-search{{ with $currentPage.File }}{{ if eq $currentPage.File.LogicalName "search.md" }} active{{ end }}{{ end }}"></span></a></li>
-<li><a href="javascript:;" class="dropdown-menu"><span class="wm wm-md wm-menu"></span></a></li>
+<li class="menu-item--search"><a href="/search/"><span class="wm wm-search{{ with $currentPage.File }}{{ if eq $currentPage.File.LogicalName "search.md" }} active{{ end }}{{ end }}"></span></a></li>
+<li class="menu-item--dropdown-menu"><a href="javascript:;" class="dropdown-menu"><span class="wm wm-md wm-menu"></span></a></li>
