--- a/layouts/partials/docs_toc.html
+++ b/layouts/partials/docs_toc.html
@@ -67,10 +67,10 @@
                 {{- end -}}
                 {{- end }}
                 <li>
-                    <a href="#{{- $cleanedID -}}" aria-label="{{- $header | plainify -}}">{{- $header | safeHTML -}}</a>
+                    <a href="#{{- $cleanedID -}}" aria-label="{{- replaceRE "\\(.*?\\)" "" $header | plainify -}}">{{- replaceRE "\\(.*?\\)" "" $header | safeHTML -}}</a>
                     {{- else }}
                 <li>
-                    <a href="#{{- $cleanedID -}}" aria-label="{{- $header | plainify -}}">{{- $header | safeHTML -}}</a>
+                    <a href="#{{- $cleanedID -}}" aria-label="{{- replaceRE "\\(.*?\\)" "" $header | plainify -}}">{{- replaceRE "\\(.*?\\)" "" $header | safeHTML -}}</a>
                     {{- end -}}
                     {{- end -}}
                     <!-- {{- $firstHeaderLevel := len (seq (index (findRE "[1-6]" (index $headers 0) 1) 0)) -}} -->
