--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -66,6 +66,7 @@ html {
   overflow-y: auto;
   font-display: swap;
   overflow-anchor: none;
+  scroll-behavior: auto;
 }
 
 html.overflow-hidden {
