--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -2003,6 +2003,7 @@ html[class*="page-docs"] a[href*="example.com"] {
   margin-inline-start: initial;
 }
 
+[class^="page-docs"] .post-content > ol>li>ul,
 [class^="page-docs"] .post-content ul>li>ol>li>ul {
   margin-bottom: 0;
 }
