--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -158,6 +158,7 @@ strong code {
 
 .post-content>ul>li>pre,
 .post-content>ol>li>pre,
+.post-content>ul>li>.highlight>pre,
 .post-content>.highlight>pre,
 .post-content>pre {
   display: grid;
