--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -526,6 +526,10 @@ body.dark .logo>a>svg path {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.btn:has(.wm) {
+  padding-right: calc(0.75rem + 0.375rem);
+}
+
 @media (prefers-reduced-motion: reduce) {
   .btn {
     transition: none;
@@ -1271,6 +1275,10 @@ fieldset:disabled a.btn {
 
 a.btn {
   box-shadow: none;
+}
+.btn > .wm-support {
+  font-size: 125%;
+  vertical-align: -8%;
 }
 .btn.btn-md > .wm-support {
   font-size: 135%;
