--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -6,6 +6,7 @@
   --main-bg: rgb(245, 245, 245);
   --main-bg-overlay: rgb(245, 245, 245, .6);
   --content: rgb(21, 21, 21);
+  --content-strong: rgb(0, 0, 0);
   --primary: rgb(20, 20, 20);
   --secondary-strong: rgb(78, 78, 78);
 
@@ -38,6 +39,7 @@
   --main-bg: rgb(29, 30, 32);
   --main-bg-overlay: rgb(29, 30, 32, .6);
   --border: rgb(63, 63, 63);
+  --content-strong: rgb(202, 202, 203);
   --secondary-strong: rgb(185, 186, 187);
 
   --entry: rgb(41, 42, 44);
