--- a/layouts/partials/nav_menu.html
+++ b/layouts/partials/nav_menu.html
@@ -71,6 +71,12 @@
             </span>
           </li>
         </ul>
+        <hr>
+        <div class="hmenu-container">
+          <ul class="hmenu-links hmenu-buttons">
+            <li class="hmenu-link-button"></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
