--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -204,9 +204,9 @@ strong code {
 }
 
 .header .logo>a {
-  line-height: calc(var(--header-height) - 0.466rem);
+  line-height: 0;
   filter: saturate(1.666);
-  /* margin-top: 2px; */
+  margin-top: 6.333px;
 }
 
 .header .logo>a>svg {
