--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -13,7 +13,7 @@
 <!-- https://fonts.google.com/share?selection.family=Roboto%20Condensed:wght@400;700%7CRoboto%20Mono:wght@300;600%7CRoboto:ital,wght@0,300;0,500;1,300;1,500 -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@300;600&family=Roboto:ital,wght@0,300;0,500;1,300;1,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;400;700&family=Roboto+Mono:wght@300;600&family=Roboto:ital,wght@0,300;0,500;1,300;1,500&display=swap" rel="stylesheet">
 
 <!-- Mark page to be accessible in JavaScript -->
 <script type="text/javascript">
