--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -27,6 +27,7 @@
 
   --alert-code-bg: rgba(245, 245, 245, .6);
 
+  --primary-strong: rgb(10, 10, 10);
   --primary-soft: rgba(30, 30, 30, .6);
 
   --chocolat-icon-left: url("data:image/svg+xml,%3Csvg xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22 viewBox%3D%220 0 32 32%22 stroke-linecap%3D%22round%22 stroke-linejoin%3D%22round%22%3E    %3Ccircle cx%3D%2216%22 cy%3D%2216%22 r%3D%2216%22 fill-opacity%3D%22.51%22%2F%3E    %3Cpath d%3D%22M15.3 20.7 10.7 16l4.6-4.7m7.4 4.7h-12%22 fill%3D%22none%22 stroke%3D%22%23fff%22 stroke-width%3D%222.8%22%2F%3E%3C%2Fsvg%3E") !important;
@@ -54,6 +55,7 @@
 
   --alert-code-bg: rgba(55, 56, 62, .2);
 
+  --primary-strong: rgb(243, 243, 244);
   --primary-soft: rgba(30, 30, 30, .9);
 
   --chocolat-icon-loader: url("data:image/svg+xml,%3Csvg xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width%3D%2238%22 height%3D%2238%22%3E  %3Cg transform%3D%22translate(1 1)%22 stroke-width%3D%222.51%22 fill%3D%22none%22 fill-rule%3D%22evenodd%22%3E    %3Ccircle stroke-opacity%3D%22.6%22 stroke%3D%22%23000%22 cx%3D%2218%22 cy%3D%2218%22 r%3D%2218%22%2F%3E    %3Cpath d%3D%22M36 18C36 8 28 0 18 0%22 stroke%3D%22%23fff%22%3E      %3CanimateTransform attributeName%3D%22transform%22 type%3D%22rotate%22 from%3D%220 18 18%22 to%3D%22360 18 18%22 dur%3D%221s%22 repeatCount%3D%22indefinite%22%2F%3E    %3C%2Fpath%3E  %3C%2Fg%3E%3C%2Fsvg%3E") !important
@@ -185,6 +187,7 @@ strong code {
   min-height: 60px;
   max-height: 60px;
   min-width: 315px;
+  font-weight: 400;
 }
 
 .header:not(.no-overflow) {
